check/testdata/invalid-legacy-files/action_with_sidebar_current.html.markdown
---
subcategory: "Example"
layout: "example"
page_title: "Example: example_action"
sidebar_current: "example"
description: |-
  Example action description.
---

# Action: example_action

Byline.

## Example Usage

```terraform
action "example_action" "example" {
  config {
    example = "value"
  }
}
```

## Argument Reference

This action supports the following arguments:

* `example` - (Required) Example argument.
